src/test/custom/valid/for/forWhile.wacc
# a nested for-loop with a while-loop inside

# Output:
# 0 1 2
# 1 2 3
# 2 3 4

# Program:

begin
  for (int i = 0; i < 3; i = i + 1) do
    int j = 0;
    while j < 3 do
        print i + j;
        print " ";
        j = j + 1
    done;
    println ""
  done
end